Added MODAL & Changed in CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./script.js" defer></script>
     <title>AGE CALCULATOR</title>
   </head>
-  <body>
+  <body onload="myFunc()">
     <main>
       <div>
         <h1>AGE CALCULATOR</h1>
@@ -23,6 +23,8 @@
         </div>
       </div>
     </main>
-    <div class="result"></div>
+    <div class="modal-bg">
+      <div class="result"></div>
+    </div>
   </body>
 </html>
